Bug 282954 - Activating Manual Filter which forwards mail crashes kmail2
Summary: Activating Manual Filter which forwards mail crashes kmail2
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-28 08:03 UTC by quax
Modified: 2011-09-28 17:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description quax 2011-09-28 08:03:29 UTC
Application: kmail (4.7.1)
KDE Platform Version: 4.7.1 (4.7.1) (Compiled from sources)
Qt Version: 4.7.4
Operating System: Linux 3.0.4-gentoo x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:

Added a filter which will forward a mail and then
activated manual filtering, result: crash of kmail2

- Custom settings of the application:
One Imap account and local folder.
The filter is only active on local folder.

The crash can be reproduced every time.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fd377df7760 (LWP 3968))]

Thread 3 (Thread 0x7fd35f275700 (LWP 3985)):
#0  0x00007fd372f0f5ac in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fd369f3e07e in ?? () from /usr/lib64/qt4/libQtWebKit.so.4
#2  0x00007fd369f3e199 in ?? () from /usr/lib64/qt4/libQtWebKit.so.4
#3  0x00007fd372f0ac1a in start_thread () from /lib64/libpthread.so.0
#4  0x00007fd375098d2d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fd35e974700 (LWP 3986)):
#0  0x00007fd37508ff43 in poll () from /lib64/libc.so.6
#1  0x00007fd36da29279 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fd36da296cc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fd375a0d916 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007fd3759e03f2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007fd3759e07dc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007fd3758ec75d in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007fd3758ef755 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007fd372f0ac1a in start_thread () from /lib64/libpthread.so.0
#9  0x00007fd375098d2d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fd377df7760 (LWP 3968)):
[KCrash Handler]
#6  0x00007fd371137c49 in AkonadiSender::sendOrQueueMessage(boost::shared_ptr<KMime::Message> const&, MessageSender::SendMethod) () from /usr/lib64/libmessagecomposer.so.4
#7  0x00007fd371138d59 in AkonadiSender::doSend(boost::shared_ptr<KMime::Message> const&, short) () from /usr/lib64/libmessagecomposer.so.4
#8  0x00007fd370b5694e in ?? () from /usr/lib64/libmailcommon.so.4
#9  0x00007fd370b7a124 in MailCommon::MailFilter::execActions(Akonadi::Item const&, bool&) const () from /usr/lib64/libmailcommon.so.4
#10 0x00007fd370b63b21 in MailCommon::FilterManager::process(Akonadi::Item const&, MailCommon::FilterManager::FilterSet, bool, QString const&) () from /usr/lib64/libmailcommon.so.4
#11 0x00007fd370b65080 in MailCommon::FilterManager::Private::slotItemsFetchedForFilter(QList<Akonadi::Item> const&) () from /usr/lib64/libmailcommon.so.4
#12 0x00007fd370b65692 in MailCommon::FilterManager::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libmailcommon.so.4
#13 0x00007fd3759f9507 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#14 0x00007fd37197d232 in Akonadi::ItemFetchJob::itemsReceived(QList<Akonadi::Item> const&) () from /usr/lib64/libakonadi-kde.so.4
#15 0x00007fd37197e874 in Akonadi::ItemFetchJob::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libakonadi-kde.so.4
#16 0x00007fd3759f9507 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#17 0x00007fd3771cbb92 in KJob::result(KJob*) () from /usr/lib64/libkdecore.so.5
#18 0x00007fd3771cbe30 in KJob::emitResult() () from /usr/lib64/libkdecore.so.5
#19 0x00007fd371991529 in Akonadi::Job::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libakonadi-kde.so.4
#20 0x00007fd37197e775 in Akonadi::ItemFetchJob::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libakonadi-kde.so.4
#21 0x00007fd3759f35de in QObject::event(QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#22 0x00007fd375eddc0c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#23 0x00007fd375ee305d in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#24 0x00007fd377804f96 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#25 0x00007fd3759e16cc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#26 0x00007fd3759e4653 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/qt4/libQtCore.so.4
#27 0x00007fd375a0dd83 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#28 0x00007fd36da24e52 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#29 0x00007fd36da29518 in ?? () from /usr/lib64/libglib-2.0.so.0
#30 0x00007fd36da296cc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#31 0x00007fd375a0d8c3 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#32 0x00007fd375f8ff0e in ?? () from /usr/lib64/qt4/libQtGui.so.4
#33 0x00007fd3759e03f2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#34 0x00007fd3759e07dc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#35 0x00007fd3759e488b in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#36 0x000000000040328c in _start ()

Reported using DrKonqi
Comment 1 quax 2011-09-28 08:56:59 UTC
Note: just noticed that there was no send-mail-agent configured.
With a send-mail-agent it works.
Thus it is a very minor bug.
Comment 2 Laurent Montel 2011-09-28 16:30:07 UTC
So it crashs when you didn't have send mail agent :)
Will look at it
Comment 3 Laurent Montel 2011-09-28 17:03:58 UTC
Git commit fc6e10168331173430dfc565fd55dedc20e93b34 by Montel Laurent.
Committed on 28/09/2011 at 19:03.
Pushed by mlaurent into branch 'master'.

Fix Bug 282954 - Activating Manual Filter which forwards mail crashes kmail2

FIXED-IN: 4.7.2
BUG: 282954

M  +4    -5    messagecomposer/akonadisender.cpp

http://commits.kde.org/kdepim/fc6e10168331173430dfc565fd55dedc20e93b34
Comment 4 Laurent Montel 2011-09-28 17:05:06 UTC
Git commit 46fcd33208196a0c57dbdf462ed63082de5330e8 by Montel Laurent.
Committed on 28/09/2011 at 19:03.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 282954 - Activating Manual Filter which forwards mail crashes kmail2

FIXED-IN: 4.7.2
BUG: 282954
(cherry picked from commit fc6e10168331173430dfc565fd55dedc20e93b34)

M  +4    -5    messagecomposer/akonadisender.cpp

http://commits.kde.org/kdepim/46fcd33208196a0c57dbdf462ed63082de5330e8