Fix Bug 282954 - Activating Manual Filter which forwards mail crashes kmail2

FIXED-IN: 4.7.2
BUG: 282954
(cherry picked from commit fc6e10168331173430dfc565fd55dedc20e93b34)